# backend/docs/swagger.yaml
@@ -134,6 +134,19 @@ paths:
       summary: Import information for a given artist into database
       tags:
       - Artist
+  /like:
+    post:
+      description: Toggles whether a user likes a given post
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Error describing failure
+          schema:
+            type: string
+      summary: Handle liking a post
+      tags:
+      - User
   /login:
     post:
       consumes:
@@ -188,6 +201,18 @@ paths:
       summary: Register user
       tags:
       - Auth
+  /userpost:
+    post:
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Error describing failure
+          schema:
+            type: string
+      summary: Create user post
+      tags:
+      - User
   /validate:
     get:
       description: Verifies if a user's session cookie contains an authenticated token
