# backend/routes/routes.go
@@ -584,6 +584,12 @@ func (h *Handler) handleConcert(inputURL string) http.HandlerFunc {
 	}
 }
 
+// @Summary Create user post
+// @Desctription Creates a post for a user. Can be set to public or private with IsPublic
+// @Tags User
+// @Success 201
+// @Failure 400 {string} error "Error describing failure"
+// @Router /userpost [post]
 func (h *Handler) handleUserPost() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		utils.SetCORSHeaders(w)
@@ -620,6 +626,12 @@ func (h *Handler) handleUserPost() http.HandlerFunc {
 	}
 }
 
+// @Summary Handle liking a post
+// @Description Toggles whether a user likes a given post
+// @Tags User
+// @Success 200
+// @Failure 400 {string} error "Error describing failure"
+// @Router /like [post]
 func (h *Handler) handleUserLike() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		utils.SetCORSHeaders(w)
